--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios-hooks": "^4.0.0",
     "formik": "^2.2.9",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-collapse": "^5.1.1",
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
     "react-hook-geolocation": "^1.1.0",
@@ -23,6 +23,7 @@
     "react-tiny-popover": "^7.2.0",
     "recoil": "^0.7.6",
     "sort-by": "^1.2.0",
+    "use-axios-client": "^2.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
